force-app/main/default/objects/SAPWarehouse__c/SAPWarehouse__c.object-meta.xml
<CustomObject>
    <label>SAP Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>