force-app/main/default/objects/SAPWarehouse__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SAP Plant</label>
    <referenceTo>SAPPlant__c</referenceTo>
    <relationshipLabel>SAP Warehouses</relationshipLabel>
    <relationshipName>SAP_Warehouses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>