force-app/main/default/objects/SAPWarehouse__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>