force-app/main/default/objects/SAPWarehouse__c/fields/WarehouseKey__c.field-meta.xml
<CustomField>
    <fullName>WarehouseKey__c</fullName>
    <description>Clave externa: PLANT-WAREHOUSE</description>
    <externalId>true</externalId>
    <label>Warehouse Key</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>